--- a/App/quizMain.css
+++ b/App/quizMain.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Rajdhani', sans-serif;
+    font-size: 2em;
     background: #F2691A;
 }
 
@@ -12,13 +13,13 @@ h1 {
 }
 
 img{
-    height: 60px;
+    height: 100px;
     width: auto;
 }
 /*----------First screen App-----------------*/
 .center {
   margin: auto;
-  width: 60%;
+  width: 80%;
     border-radius: 5px;
     background: #fff;
     padding: 10px;
@@ -52,7 +53,8 @@ button{
 
 .container {
   margin: 5em;
-  animation: 2s infinite beat;
+  animation: 3s infinite beat;
+
 }
 
 @keyframes beat {
