--- a/App/quiz.css
+++ b/App/quiz.css
@@ -4,8 +4,9 @@ body {
     background: #9DD9D2;
 }
 
-h1 {
+h1, h2, h3 {
     text-align: center;
+    color:  #F2691A; 
 }
 
  ul {
@@ -16,7 +17,7 @@ img{
     height: 150px;
     width: auto;
 }
-/*----------First screen App-----------------*/
+/*---------- screen App-----------------*/
 
 
 
@@ -38,4 +39,25 @@ button{
     font-family: 'Rajdhani', sans-serif;
     font-size: 0.7em;
     background: #9DD9D2
+}
+
+
+/*-------Result-------*/
+
+p {
+    color:#F2691A; 
+    font-weight: bold;
+     text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    
+}
+
+.warning{
+    text-align: center;
+    font-size: 0.5em;
+    color: red;
+    
 }
